@@ -2,13 +2,12 @@ package no.einnsyn.apiv3.utils;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class FoedselsnummerValidatorTest {
   // @formatter:off
-  List<String> validFoedselsnummers = Arrays.asList(
+  List<String> validFoedselsnummers = List.of(
     "05063826601",
     "31085314494",
     "25038738758",
@@ -23,7 +22,7 @@ class FoedselsnummerValidatorTest {
   // @formatter:on
 
   // @formatter:off
-  List<String> invalidFoedselsnummers = Arrays.asList(
+  List<String> invalidFoedselsnummers = List.of(
     "050638266010", // Extra integer
     "3108531a449", // Contains non-integer character
     "32038738758", // 32 days in month
